force-app/main/default/objects/Product2/fields/Bootcamp_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Bootcamp_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bootcamp Campaign</label>
    <type>Checkbox</type>
</CustomField>