force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Android Development Training</fullName>
            </value>
            <value>
                <fullName>Enterprise IT &amp; Linux System Administration Training</fullName>
            </value>
            <value>
                <fullName>Linux Programming &amp; Development Training</fullName>
            </value>
            <value>
                <fullName>Open Source Compliance Courses</fullName>
            </value>
            <value>
                <fullName>Tizen Project Training</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>