force-app/main/default/objects/Product2/fields/Certification_Programs__c.field-meta.xml
<CustomField>
    <fullName>Certification_Programs__c</fullName>
    <label>Certification Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>