force-app/main/default/objects/Product2/fields/Corporate_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Product_Description__c</fullName>
    <label>Corporate Product Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>