force-app/main/default/objects/Product2/fields/Course_Group_id__c.field-meta.xml
<CustomField>
    <fullName>Course_Group_id__c</fullName>
    <label>Course Group id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>