force-app/main/default/objects/Product2/fields/NetSuite_Revenue_Schedule__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Revenue_Schedule__c</fullName>
    <label>NetSuite Revenue Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NetSuite_Revenue_Schedule</valueSetName>
    </valueSet>
</CustomField>