force-app/main/default/objects/Product2/fields/NS_Revenue_Schedule__c.field-meta.xml
<CustomField>
    <fullName>NS_Revenue_Schedule__c</fullName>
    <label>NS Revenue Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>