force-app/main/default/objects/Product2/fields/Tax_Class__c.field-meta.xml
<CustomField>
    <fullName>Tax_Class__c</fullName>
    <defaultValue>&quot;T1&quot;</defaultValue>
    <label>Tax Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>