force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>NS_Sync__c</columns>
    <columns>NS_ID__c</columns>
    <columns>NetSuite_Revenue_Schedule__c</columns>
    <columns>PRODUCT2.SKU</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>