force-app/main/default/objects/Product2/listViews/Alternate_Funding.listView-meta.xml
<ListView>
    <fullName>Alternate_Funding</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Alternate Funding</value>
    </filters>
    <label>Alternate Funding</label>
</ListView>