force-app/main/default/objects/Product2/listViews/Bundle.listView-meta.xml
<ListView>
    <fullName>Bundle</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.SKU</columns>
    <columns>Status__c</columns>
    <columns>TI_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Bundle</value>
    </filters>
    <label>Bundle</label>
</ListView>