force-app/main/default/objects/Product2/listViews/Membership_Product_View.listView-meta.xml
<ListView>
    <fullName>Membership_Product_View</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Tax_Class__c</columns>
    <columns>Category__c</columns>
    <columns>NS_Revenue_Schedule__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Membership</value>
    </filters>
    <label>Membership Product View</label>
</ListView>