force-app/main/default/objects/Product2/listViews/Training_Course_View.listView-meta.xml
<ListView>
    <fullName>Training_Course_View</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>Course_Code__c</columns>
    <columns>Technology__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>TI_Id__c</columns>
    <columns>PRODUCT2.SKU</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Training</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Technology__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Training Courses View</label>
</ListView>